--- a/repo/depictions/Ocean/index.html
+++ b/repo/depictions/Ocean/index.html
@@ -25,7 +25,7 @@
   <div class="">
     <div class="container" style="">
       <div class="row">
-        <div class="col-md-12"><img class="img-fluid d-block mx-auto py-0" src="../../../MetaKiller/CydiaIcon.png" style="max-width: 100px; max-height: 100px;">
+        <div class="col-md-12"><img class="img-fluid d-block mx-auto py-0" src="https://github.com/OceanForSileo/repo/blob/master/repo/depictions/Ocean/assets/app/oceanIcon.png?raw=true" style="max-width: 100px; max-height: 100px;">
           <h6 class="text-left">Version: 0.1.0<br>Build Stage: Beta<br>by TeamOcean</h6>
         </div>
       </div>
