--- a/repo/index.html
+++ b/repo/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>App Neon - Pingendo template</title>
-  <meta name="description" content="Free Bootstrap 4 Pingendo Neon template made for app and softwares.">
+  <title>Ocean Tweak Repository</title>
+  <meta name="description" content="Official Ocean Tweak Repo.">
   <meta name="keywords" content="Pingendo app neon free template bootstrap 4">
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
